ecmascript/parser/tests/test262-error-references/fail/9c961739e5d9e2ff.module.js.stderr
error: Expected from, got Some(From)
 --> $DIR/tests/test262-parser/fail/9c961739e5d9e2ff.module.js:1:10
  |
1 | export * From "a"
  |          ^^^^

